packages/forminator-form/src/scss/form-basic/_typography.scss
@import '../helpers/wrappers';

@mixin typography($divi: false) {

	@include wrapper-class($divi, $rtl: false) {

		.forminator-title,
		.forminator-subtitle {
			display: block;
			margin: 0;
			padding: 0;
			border: 0;
		}

		.forminator-label {
			display: block;

			&[for] {
				cursor: pointer;
			}
		}

		.forminator-description {
			display: flex;
			margin: 5px 0 0;
		}

		.forminator-error-message {
			display: none;
			margin: 5px 0 0;
		}

		.forminator-has_error {

			.forminator-error-message {
				display: block;
			}
		}
	}
}

